[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="InteractionLabel" type="Label" parent="."]
self_modulate = Color( 0.172549, 1, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 450.0
text = "LABEL TEXT"
align = 1
valign = 1
uppercase = true

[node name="EnterCode" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="ButtonSend" type="Button" parent="EnterCode"]
margin_left = 36.0
margin_top = 41.0
margin_right = 96.0
margin_bottom = 71.0
text = "SEND"

[node name="ButtonClose" type="Button" parent="EnterCode"]
margin_left = -113.0
margin_top = 43.0
margin_right = -61.0
margin_bottom = 63.0
text = "CLOSE"

[node name="LineEdit" type="LineEdit" parent="EnterCode"]
anchor_right = 0.349
margin_left = -266.0
margin_top = -10.0
margin_right = 220.04
margin_bottom = 14.0
text = "TEST"
align = 1
caret_blink = true

[connection signal="pressed" from="EnterCode/ButtonSend" to="." method="_on_ButtonSend_pressed"]
[connection signal="pressed" from="EnterCode/ButtonClose" to="." method="_on_ButtonClose_pressed"]
[connection signal="text_entered" from="EnterCode/LineEdit" to="." method="_on_LineEdit_text_entered"]
